Fix format string

--- a/po/tr.po
+++ b/po/tr.po
@@ -12293,7 +12293,7 @@ msgstr ""
 #: po/advisory_rules.php:218
 #, php-format
 msgid "slow_launch_time is set to %s"
-msgstr "slow_launch_time %d'e ayarlı"
+msgstr "slow_launch_time %s'e ayarlı"
 
 #: po/advisory_rules.php:220
 #, fuzzy
