Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -1520,7 +1520,7 @@ msgstr "Ratgebersystem"
 
 #: js/messages.php:197
 msgid "Possible performance issues"
-msgstr ""
+msgstr "Mögliche Performance-Probleme"
 
 #: js/messages.php:198
 msgid "Issue"
