Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -1524,7 +1524,7 @@ msgstr "Mögliche Performance-Probleme"
 
 #: js/messages.php:198
 msgid "Issue"
-msgstr ""
+msgstr "Problem"
 
 #: js/messages.php:199
 #, fuzzy
