Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -1527,10 +1527,9 @@ msgid "Issue"
 msgstr "Problem"
 
 #: js/messages.php:199
-#, fuzzy
 #| msgid "Documentation"
 msgid "Recommendation"
-msgstr "Dokumentation"
+msgstr "Empfehlung"
 
 #: js/messages.php:200
 #, fuzzy
