Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-12 15:02+0200\n"
+"PO-Revision-Date: 2011-08-12 15:03+0200\n"
 "Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -1540,7 +1540,7 @@ msgstr "Regel-Details"
 #, fuzzy
 #| msgid "Authentication"
 msgid "Justification"
-msgstr "Authentifizierung"
+msgstr "Justierung"
 
 #: js/messages.php:202
 msgid "Used variable / formula"
