--- a/po/de.po
+++ b/po/de.po
@@ -1548,7 +1548,7 @@ msgstr ""
 
 #: js/messages.php:203
 msgid "Test"
-msgstr ""
+msgstr "Test"
 
 #: js/messages.php:208 libraries/tbl_properties.inc.php:763
 #: pmd_general.php:388 pmd_general.php:425 pmd_general.php:545
