--- a/po/ja.po
+++ b/po/ja.po
@@ -11538,10 +11538,9 @@ msgid "Current version: %s"
 msgstr "バージョンを作成"
 
 #: po/advisory_rules.php:40 po/advisory_rules.php:45
-#, fuzzy
 #| msgid "Version"
 msgid "Minor Version"
-msgstr "バージョン"
+msgstr "マイナーバージョン"
 
 #: po/advisory_rules.php:41
 msgid "Version less than 5.1.30 (the first GA release of 5.1)."
