Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -1188,7 +1188,7 @@ msgstr "Durchschnittliche Auslastung"
 #, fuzzy
 #| msgid "System memory"
 msgid "Total memory"
-msgstr "Arbeitsspeicher"
+msgstr "Gesamter Speicher"
 
 #: js/messages.php:108
 #, fuzzy
