--- a/po/de.po
+++ b/po/de.po
@@ -1194,7 +1194,7 @@ msgstr "Gesamter Speicher"
 #, fuzzy
 #| msgid "System memory"
 msgid "Cached memory"
-msgstr "Arbeitsspeicher"
+msgstr "Cached Speicher"
 
 #: js/messages.php:109
 #, fuzzy
