--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-13 01:54+0200\n"
+"PO-Revision-Date: 2011-08-13 01:55+0200\n"
 "Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -2685,7 +2685,7 @@ msgstr "%s Tage, %s Stunden, %s Minuten und %s Sekunden"
 
 #: libraries/common.lib.php:1944
 msgid "Missing parameter:"
-msgstr "Fehlender Parameter."
+msgstr "Fehlende(r) Parameter:"
 
 #: libraries/common.lib.php:2267 libraries/common.lib.php:2270
 #: libraries/display_tbl.lib.php:306
