--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-13 01:55+0200\n"
+"PO-Revision-Date: 2011-08-13 01:57+0200\n"
 "Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -1333,8 +1333,8 @@ msgid ""
 "Following settings will be applied globally and reset to default on server "
 "restart:"
 msgstr ""
-"Die folgenden Einstellungen werden global übernommen, und auf ihre "
-"Ursprungswerte zurückgesetzt bei einem Server Neustart."
+"Die folgenden Einstellungen werden global übernommen, und bei einem Server-"
+"Neustart auf ihre Ursprungswerte zurückgesetzt:"
 
 #. l10n: %s is FILE or TABLE
 #: js/messages.php:146
