--- a/po/de.po
+++ b/po/de.po
@@ -2052,7 +2052,7 @@ msgstr "Schriftgröße"
 
 #: libraries/File.class.php:220
 msgid "File was not an uploaded file."
-msgstr "Bei der Datei handelt es sich um keine hochgeladene Datei,"
+msgstr "Bei der Datei handelt es sich um keine hochgeladene Datei."
 
 #: libraries/File.class.php:259 libraries/File.class.php:388
 msgid "Unknown error while uploading."
