--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-13 01:57+0200\n"
+"PO-Revision-Date: 2011-08-13 01:58+0200\n"
 "Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -2352,7 +2352,7 @@ msgstr "Passwort:"
 
 #: libraries/auth/cookie.auth.lib.php:228
 msgid "Server Choice"
-msgstr "Server Auswählen"
+msgstr "Server auswählen"
 
 #: libraries/auth/cookie.auth.lib.php:274 libraries/header.inc.php:87
 msgid "Cookies must be enabled past this point."
