--- a/po/de.po
+++ b/po/de.po
@@ -11121,7 +11121,7 @@ msgstr "Kann Index nicht in PRIMARY umbenennen!"
 
 #: tbl_indexes.php:91
 msgid "No index parts defined!"
-msgstr "Keine Indizes definiert"
+msgstr "Keine Indizes definiert!"
 
 #: tbl_indexes.php:169
 msgid "Create a new index"
