Translation update done using Pootle.

--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-13 12:05+0200\n"
+"PO-Revision-Date: 2011-08-13 12:11+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -11658,7 +11658,7 @@ msgstr ""
 msgid ""
 "The query cache is enabled and the server receives %d queries per second. "
 "This rule fires if there is more than 100 queries per second."
-msgstr ""
+msgstr "クエリキャッシュが有効で、サーバが毎秒 %d 個のクエリを受信しています。毎秒 100 個以上のクエリがある場合、このルールが適用されます。"
 
 #: po/advisory_rules.php:75
 msgid "Query cache efficiency (%)"
