--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-13 12:20+0200\n"
+"PO-Revision-Date: 2011-08-13 12:23+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -11684,7 +11684,7 @@ msgstr "クエリキャッシュ"
 #: po/advisory_rules.php:81
 #, php-format
 msgid "Less than 80% of the query cache is being utilized."
-msgstr ""
+msgstr "クエリキャッシュの利用率が 80% 未満です。"
 
 #: po/advisory_rules.php:82
 msgid ""
