--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-13 12:31+0200\n"
+"PO-Revision-Date: 2011-08-13 12:39+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -11776,7 +11776,7 @@ msgstr ""
 #: po/advisory_rules.php:98
 #, php-format
 msgid "Current query cache size: %s"
-msgstr ""
+msgstr "現在のクエリキャッシュサイズ: %s"
 
 #: po/advisory_rules.php:100
 #, fuzzy
