--- a/po/pt.po
+++ b/po/pt.po
@@ -716,10 +716,9 @@ msgid "Add prefix to table"
 msgstr "Adicionar prefixo à tabela"
 
 #: db_structure.php:517 libraries/mult_submits.inc.php:251
-#, fuzzy
 #| msgid "Replace table data with file"
 msgid "Replace table prefix"
-msgstr "Substituir os dados da tabela pelos do arquivo"
+msgstr "Substituir prefixo da tabela"
 
 #: db_structure.php:519 libraries/mult_submits.inc.php:251
 #, fuzzy
