--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-11 22:58+0200\n"
+"PO-Revision-Date: 2011-08-13 21:34+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1120,10 +1120,9 @@ msgid "Query statistics"
 msgstr "Sorgu istatistikleri"
 
 #: js/messages.php:93
-#, fuzzy
 #| msgid "Failed to read configuration file"
 msgid "Local monitor configuration icompatible"
-msgstr "Yapılandırma dosyasını okuma başarısız"
+msgstr "Yerel izleme yapılandırması uyumsuz"
 
 #: js/messages.php:94
 msgid ""
