--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-13 21:34+0200\n"
+"PO-Revision-Date: 2011-08-13 23:24+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1133,10 +1133,9 @@ msgid ""
 msgstr ""
 
 #: js/messages.php:96
-#, fuzzy
 #| msgid "Query cache disabled"
 msgid "Query cache efficiency"
-msgstr "Sorgu önbelleği etkisizleştirildi"
+msgstr "Sorgu önbelleği verimi"
 
 #: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
