Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-13 23:25+0200\n"
+"PO-Revision-Date: 2011-08-13 23:26+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -10186,10 +10186,9 @@ msgstr ""
 "defa boşaltmak daha fazla izlemeyi gerektirmez."
 
 #: server_status.php:1513
-#, fuzzy
 #| msgid "Remove chart"
 msgid "Preset chart"
-msgstr "Çizelgeyi kaldır"
+msgstr "Hazır çizelge"
 
 #: server_status.php:1517
 msgid "Status variable(s)"
