--- a/po/tr.po
+++ b/po/tr.po
@@ -11837,10 +11837,9 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, fuzzy
 #| msgid "% sorts that cause temporary tales"
 msgid "Percentage of sorts that cause temporary tables"
-msgstr "%, geçici tablolara sebep olanı sıralar"
+msgstr "Geçici tablolara sebep olan sıralamaların yüzdesi"
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
 msgid "Too many sorts are causing temporary tables."
