Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-13 23:28+0200\n"
+"PO-Revision-Date: 2011-08-13 23:30+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -11891,10 +11891,9 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-#, fuzzy
 #| msgid "There are too many joins without indexes."
 msgid "Rate of joins without indexes"
-msgstr "İndeksler olmadan çok fazla katılım var."
+msgstr "İndeksler olmaksızın katılım oranı"
 
 #: po/advisory_rules.php:121
 msgid "There are too many joins without indexes."
