--- a/po/tr.po
+++ b/po/tr.po
@@ -12201,10 +12201,9 @@ msgid "Table lock wait rate: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:200
-#, fuzzy
 #| msgid "thread cache"
 msgid "Thread cache"
-msgstr "işlem önbelleği"
+msgstr "İşlem önbelleği"
 
 #: po/advisory_rules.php:201
 msgid ""
